# polyshow

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_STYLE.md  DESIGN.md  PolyShowIpcClient.h  PolyShowIpcSenderMain.cpp  README.md  main.cpp
cmake/: DeployRuntime.cmake  NSIS.template.in  Version.cmake
designs/ui-prototype/: polyshow-v1.pen  polyshow.pen  test.pen
html/: app.js  index.html  styles.css
include/core/: GeometryScene.h  GeometryTypes.h  LayerEditing.h  PrimitiveEditing.h  Version.h.in
include/parsers/: PlyParser.h  PlySerializer.h
include/style/: AppStyle.h  DarkStyle.h  LightStyle.h  RenderTheme.h  ThemeMode.h
include/ui/: ColorField.h  EditorPanelHeader.h  GeometryViewer.h  IconButton.h  InspectorCheckBox.h  InspectorPanel.h  InspectorSection.h  IpcListenerWorker.h  LayerSidebar.h  LogPanel.h  MainWindow.h  MaterialIcon.h  MaterialIconLabel.h  OutlinerFilterProxyModel.h  OutlinerItemDelegate.h  OutlinerTreeModel.h  PanelFrame.h  PillButton.h  PropertyPanel.h  UiTheme.h
resources/fonts/: fonts.qrc
resources/icons/: icons.qrc  polyshow-logo.spec.json
resources/overlay/: overlay.qrc
resources/style/: darkstyle.qss  lightstyle.qss  style.qrc
src/core/: GeometryScene.cpp  LayerEditing.cpp  PrimitiveEditing.cpp
src/parsers/: PlyParser.cpp  PlySerializer.cpp
src/style/: AppStyle.cpp  DarkStyle.cpp  LightStyle.cpp  RenderTheme.cpp
src/ui/: ColorField.cpp  EditorPanelHeader.cpp  GeometryViewer.cpp  IconButton.cpp  InspectorCheckBox.cpp  InspectorPanel.cpp  InspectorSection.cpp  IpcListenerWorker.cpp  LayerSidebar.cpp  LogPanel.cpp  MainWindow.cpp  MaterialIcon.cpp  MaterialIconLabel.cpp  OutlinerFilterProxyModel.cpp  OutlinerItemDelegate.cpp  OutlinerTreeModel.cpp  PanelFrame.cpp  PillButton.cpp  PropertyPanel.cpp  UiTheme.cpp
test_data/ply/: comments_and_blanks.ply  fill_none.ply  invalid_bad_number.ply  invalid_degenerate_polygon.ply  invalid_mid_shape_style.ply  invalid_unknown_command.ply  mixed_primitives.ply  multi_shape.ply  named_shapes.ply  pentagon.ply  points_only.ply  polyline_open.ply  square.ply  style_colors.ply  style_sizes.ply  triangle.ply
trae-process/: 20260201_UI_Prototype_Optimization.md
